# egakareta

./: .gitattributes  .gitignore  .prettierrc  AGENTS.md  COMMERCIAL.md  COMMERICAL.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  dist.js  dist.ts  index.html  lefthook.yml  license-checker-config.json  license-header.txt  nodemon.json  package.json  rust-toolchain.toml  vitest.config.mts  wrangler.jsonc  wrangler.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/license/: config.json  header.txt
.github/workflows/: ci.yml  codecov.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  deploy.yml  test.yml
assets/: README.md
assets/blocks/: camera_trigger.json  castle_brick.json  cobblestone.json  dirt.json  festival_lantern.json  finish.json  flower_mosaic.json  gem.json  grass.json  ivy_trellis.json  lava.json  moon_rune.json  painted_pot.json  painted_pot.mtl  plaster_wall.json  practice_checkpoint_flag.mtl  ribbon_banner.json  solid.json  speedportal.json  standard.json  stone.json  thatched_roof.json  timber_beam.json  torch.json  transform_trigger.json  void.json  wood_shingle_roof.json  wooden_fence.json
assets/levels/Flowerfield/: metadata.egb  metadata.json
assets/levels/Golden Haze/: metadata.egb  metadata.json
benches/: perf_hot_paths.rs
functions/: _auth.ts  _supabase.ts  _supabase_types.ts  _utils.ts  cloudflare-env.d.ts  hello.ts  signin.ts  signup.ts  tsconfig.json
functions/api/auth/: refresh.ts  signin.ts  signout.ts
functions/api/auth/handoff/: claim.ts  start.ts
functions/auth/: callback.ts
scripts/: build.ts  dev.ts  dist.ts
scripts/tools/: geometry.html
src/: audio_service.rs  auth_types.rs  bench_support.rs  block_geometry.rs  block_repository.rs  commands.rs  editor_domain.rs  editor_ui.rs  error_utils.rs  game.rs  grid.wgsl  import_export_service.rs  level_codec.rs  level_repository.rs  lib.rs  main.rs  mesh.rs  shader.wgsl  state.rs  test_utils.rs  triggers.rs  types.rs
src/editor_domain/: cursor.rs  mod.rs  session.rs  snap.rs  tap_management.rs  taps.rs  timeline.rs  transitions.rs
src/editor_ui/: components.rs  explorer.rs  flame_graph.rs  menu.rs  mod.rs
src/editor_ui/modes/: compose.rs  mod.rs  shared.rs  tapping.rs  timing.rs  trigger.rs
src/game/: mod.rs  physics.rs  scenes.rs  simulation.rs  spatial.rs  state.rs  tests.rs
src/mesh/: advanced_shapes.rs  blocks.rs  egmesh.rs  geometry.rs  lighting.rs  mod.rs  noise.rs  obj.rs  primitives.rs  shapes.rs  tests.rs  transforms.rs
src/mesh/builders/: cursor.rs  editor.rs  floor.rs  game.rs  gizmo.rs  grid.rs  mod.rs  outlines.rs
src/platform/: application.rs  audio.rs  audio_backend.rs  auth.rs  block_icon_cache.rs  input_mapping.rs  input_routing.rs  io.rs  mod.rs  native_runtime.rs  parallel.rs  pipeline.rs  runtime.rs  services.rs  state_host.rs  storage.rs  task.rs  web_runtime.rs
src/platform/web_runtime/: input.rs  mod.rs
src/state/: audio_state.rs  auth_state.rs  command_dispatch.rs  core.rs  editor.rs  editor_actions.rs  editor_camera.rs  editor_command.rs  editor_config_state.rs  editor_dispatch.rs  editor_domain_tests.rs  editor_explorer.rs  editor_interaction.rs  editor_scene.rs  editor_snap_tests.rs  editor_state.rs  editor_timeline.rs  editor_timing.rs  editor_triggers.rs  history.rs  level_management.rs  lifecycle.rs  mod.rs  perf.rs  render.rs  runtime.rs  shader_tests.rs  state_helpers.rs  tests.rs  update.rs  view_model.rs
src/state/editor_interaction/: camera.rs  cursor.rs  gizmo.rs  mod.rs  picking.rs  selection.rs
src/state/render/: block_icon.rs  draw.rs  mod.rs
supabase/: config.toml  seed.sql
supabase/env/: production.toml
supabase/migrations/: 20260223000000_extensions.sql  20260223000000_init_schema.sql  20260223000001_tables.sql  20260223000002_indexes.sql  20260223000003_buckets.sql  20260223000004_functions.sql
supabase/templates/: confirmation.html
supabase/tests/: 01_schema_security.sql  02_rls_profiles_2fa.sql  03_admin_restrictions_rpc.sql  04_rls_content_integrity.sql
tests/: egb_tests.rs  native_launch_smoke.rs
tests/functions/: auth_validation.test.ts  context.ts  hello.test.ts
website/: package.json  tsconfig.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/auth/: actions.ts
website/app/auth/login/: page.tsx
website/app/auth/signup/: page.tsx
website/app/beatmaps/: page.tsx
website/app/beatmaps/[slug]/: page.tsx
website/app/beatmaps/[slug]/comments/: page.tsx
website/app/beatmaps/[slug]/leaderboard/: page.tsx
website/app/leaderboards/: page.tsx
website/app/leaderboards/pp/: page.tsx
website/app/play/: page.tsx
website/app/profiles/: page.tsx
website/app/profiles/[handle]/: page.tsx
website/components/: AuthStatus.tsx  GameCanvas.tsx  SkylineNav.tsx
website/lib/: mock-data.ts
website/lib/supabase/: server.ts
