# Copyright (c) egakareta <team@egakareta.com>.
# Licensed under the GNU AGPLv3 or a proprietary Commercial License.
# See LICENSE and COMMERCIAL.md for details.
[package]
name = "egakareta"
version = "0.1.0"
edition = "2021"
description = "Feel the beat, follow the line."
repository = "https://github.com/egakareta/egakareta"
license = "MIT"
default-run = "egakareta"

[lib]
name = "egakareta_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "27", features = ["webgpu", "webgl"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "EventTarget",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "Performance",
    "HtmlAudioElement",
    "AudioContext",
    "AudioBuffer",
    "DomTokenList",
    "HtmlElement",
    "HtmlAnchorElement",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "DomStringList",
] }
js-sys = "0.3"
web-time = "1.1"
gloo-console = "0.4"
gloo-events = "0.3"
gloo-file = "0.4"
gloo-net = "0.7"
gloo-render = "0.3"
gloo-utils = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
zstd = "0.13"
include_dir = "0.7"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
base64 = "0.22"
egui = "0.33"
egui-wgpu = "0.33"
egui-phosphor = "0.11.0"
rfd = "0.17"
wgpu-profiler = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }
keyframe = "1.1"
async-trait = "0.1"
winit = "0.30"
getrandom = { version = "0", features = ["wasm_js"] }
cpal = { version = "0.17", features = ["wasm-bindgen", "audioworklet"] }
rodio = { version = "0.22", features = ["symphonia-all", "wasm-bindgen"] }
symphonia = { version = "0.5", features = ["all"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
egui-winit = "0.33"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
rexie = "0.6"
egui-winit = { version = "0.33", default-features = false } # default features include arboard, which doesnt have wasm support yet https://github.com/1Password/arboard/pull/160

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build-dependencies]
serde_json = "1"
winres = "0.1"

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }
tempfile = "3"
