# Copyright (c) egakareta <team@egakareta.com>.
# Licensed under the GNU AGPLv3 or a proprietary Commercial License.
# See LICENSE and COMMERCIAL.md for details.
[package]
name = "egakareta"
version = "0.1.0"
edition = "2021"
description = "Feel the beat, follow the line."
repository = "https://github.com/egakareta/egakareta"
license = "MIT"
default-run = "egakareta"

[lib]
name = "egakareta_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "29.0.3", features = ["webgpu", "webgl"] }
pollster = "0.4"
log = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
web-time = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
zstd = "0.13"
include_dir = "0.7"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-phosphor = "0.12.0"
puffin = { git = "https://github.com/EmbarkStudios/puffin", rev = "7e08a533f9debfb7d051547263d2ab84c666314f" }
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin", rev = "7e08a533f9debfb7d051547263d2ab84c666314f" }
rfd = "0.17"
rayon = "1"
image = { version = "0.25", default-features = false, features = [
    "ico",
    "png",
] }
async-trait = "0.1"
winit = "0.30"
cpal = { version = "0.17", features = ["wasm-bindgen", "audioworklet"] }
rodio = { version = "0.22", default-features = false, features = [
    "mp3",
    "playback",
    "vorbis",
    "wasm-bindgen",
    "wav",
] }
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "ogg",
    "pcm",
    "vorbis",
    "wav",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
egui-winit = "0.34.2"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
egui-winit = { version = "0.34.2", default-features = false } # default features include arboard, which doesnt have wasm support yet https://github.com/1Password/arboard/pull/160
gloo-net = "0.6"
gloo-console = "0.4"
gloo-file = "0.4"
gloo-utils = "0.3"
js-sys = "0.3"
puffin = { git = "https://github.com/EmbarkStudios/puffin", rev = "7e08a533f9debfb7d051547263d2ab84c666314f", features = [
    "web",
] }
rexie = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "EventTarget",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "Performance",
    "HtmlAudioElement",
    "AudioContext",
    "AudioBuffer",
    "DomTokenList",
    "HtmlElement",
    "HtmlAnchorElement",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "DomStringList",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
winres = "0.1"
zstd = "0.13"

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }
tempfile = "3"
